[project]
name = "apple-clusters-detector"
version = "0.1.0"
description = "Real-time apple cluster detection using a custom-trained YOLO model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "coremltools>=9.0",
    "flask>=3.1.3",
    "numpy>=2.5.1",
    "onnx>=1.22.0",
    "onnxruntime>=1.27.0",
    "onnxslim>=0.1.94",
    "opencv-python-headless>=5.0.0.93",
    "pillow>=12.3.0",
    "ultralytics>=8.4.90",
]
